<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background3"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".signIn_Up.FogotPassword">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/manuale_bold"
        android:gravity="center"
        android:text="@string/verify_account"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_fogot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:drawableStart="@drawable/gmail"
        android:drawablePadding="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="25sp"
        app:autoSizeTextType="uniform"
        tools:ignore="Autofill" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center">

        <Button
            android:id="@+id/btn_Back"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:background="@drawable/button"
            android:fontFamily="@font/manuale_bold"
            android:text="@string/back"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:backgroundTint="@color/blue_soft" />

        <Button
            android:id="@+id/btn_XacNhan"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/button"
            android:fontFamily="@font/manuale_bold"
            android:text="@string/confirm"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:backgroundTint="@color/blue_soft" />

    </LinearLayout>

</LinearLayout>