<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userInterface.HotelDetail">


    <ImageView
        android:id="@+id/header_background"
        android:layout_width="412dp"
        android:layout_height="291dp"
        android:transitionName="background_image_transition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background2"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/down_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="34dp"
        android:src="@drawable/ic_down_arrow"
        app:layout_constraintEnd_toEndOf="@+id/header_background"
        app:layout_constraintTop_toTopOf="@+id/header_background"
        tools:ignore="ContentDescription" />

    <ScrollView
        android:id="@+id/third_scrillview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/third_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_extra_bold"
                android:text="@string/room_number"
                android:textColor="@color/colorPrimary"
                android:textSize="25sp" />

        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <RatingBar
                    android:id="@+id/third_ratingbar"
                    style="?android:attr/ratingBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:max="5"
                    android:numStars="5"
                    android:progressTint="@color/yellow_dark"
                    android:rating="4.5"
                    android:stepSize="0.5" />

                <TextView
                    android:id="@+id/third_rating_number2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/open_sans_light"
                    android:text=""
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/about"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/about_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:alpha="0.5"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/description"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/venue_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/room_type"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/venue_type_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:alpha="0.5"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/type"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtView_priceDetail"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:progressTint="@color/colorAccent"
                    android:text="@string/price"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txtView_priceDetail2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/open_sans_light"
                    android:text=""
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp" />

            </LinearLayout>

            <Button
                android:id="@+id/roadmap_button"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:text="@string/booking"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:backgroundTint="@color/blue_soft" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>